# ascii-generator

./: .gitignore  CMakeLists.txt  README.md  index.php  main.cpp
actions/: Contrast.php  GrayScale.php  ImagePull.php
cpp/: AsciiGeneration.cpp  DitherImage.cpp  EditContrast.cpp  GrayScale.cpp  ImagePull.cpp
lib/: CheckFolder.h  ImageProcessing.h  asciiGeneration.h  dithering.h  include.h
outputImages/: ascii.txt
